# w2x

./: .gitignore  Commands.txt  README.md
go2wasm/: Commands.txt  go.mod  go.wasm  go.wat  main.go  main.wasm  main.wat
ptxhost/: matrix_mul.cu  max_pool_2d.cu  my_ptx.cu  ptx_debug.cu  test_all.cu  (+2 more)
wasm2ptx/: Cargo.toml  output.ptx
wasm2ptx/src/: ir.rs  kernel_detector.rs  label_context.rs  main.rs  memory.rs  my_ptx.cu  notes.txt  ptx_module.rs  stack.rs  translator.rs  utils.rs
wasm2ptx/src/operators/: mod.rs
wasm2ptx/src/operators/controlflow/: end.rs  mod.rs  return.rs  select.rs  unreachable.rs
wasm2ptx/src/operators/custom/: mod.rs  specialregister.rs
wasm2ptx/src/operators/f32/: add.rs  const.rs  div.rs  gt.rs  load.rs  lt.rs  mod.rs  mul.rs  store.rs  sub.rs
wasm2ptx/src/operators/i32/: add.rs  const.rs  divu.rs  eq.rs  eqz.rs  geu.rs  gtu.rs  load.rs  ltu.rs  mod.rs  mul.rs  or.rs  rotl.rs  rotr.rs  shl.rs  shru.rs  store.rs  sub.rs
wasm2ptx/src/operators/local/: get.rs  mod.rs  set.rs  tee.rs
wasm2ptx/src/operators/loops/: block.rs  br.rs  brif.rs  if.rs  loop.rs  mod.rs
wasm2ptx/test/: go.wasm  go.wat  rust.wasm  rust.wat  vector_wasm.wasm  vector_wasm.wat
wasm2ptx/test/go/: matrix_mul_kernel.ptx  vector_add_kernel.ptx  vector_add_loop_kernel.ptx
wasm2ptx/test/rust/: dot_product_kernel.ptx  matrix_mul_kernel.ptx  matrix_transpose_kernel.ptx  max_pooling_2d_kernel.ptx  relu_kernel.ptx  softmax_kernel.ptx  vector_add_kernel.ptx  vector_add_loop_kernel.ptx  vector_add_shared_kernel.ptx  vector_scale_kernel.ptx  vector_sub_kernel.ptx
(+12 files in other folders)
