[package]
name = "wasm2ptx"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
wasmparser = "0.116.0"  
wasmer = "4.0.0"     
log = "0.4"
anyhow = "1.0"
env_logger = "0.10"
